Fix mismatched spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,15 @@
 	  height: 100%;
 	  
 }
+
 html, body, .container{
 	height: 100%;
 }
+
 .container{
 	position: relative;
 }
+
 .places-gone{
 	display: none;
 	position: absolute;
@@ -15,6 +18,7 @@ html, body, .container{
 	left: 10px;
 	
 }
+
 .location, .place{
 	width: 150px;
 	background-color: black;
@@ -26,24 +30,24 @@ html, body, .container{
 	-moz-user-select: none;
 	-ms-user-sleect: none;
 }
+
 .place:hover{
 	background-color: green;
 	cursor: pointer;
 }
 
-#locationList{
-	/*display: none;*/
-}
 .title, .details{
 	width: 100%;
 	padding: 0;
 	margin: 0;
 	text-align: center;
 }
+
 h2, h3{
 	padding: 0;
 	margin: 0;
 }
+
 .locationTypes{
 	background-color: #ccc;
 }
@@ -60,6 +64,7 @@ h2, h3{
 .show{
 	display:block;
 }
+
 .menuControlPushed{
 	left: 160px;
 }
